--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal CV backend",
   "main": "index.js",
   "scripts": {
-    "start": "express index",
+    "start": "node index",
     "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
