--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Personal CV backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pema Ngodup",
