--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.20"
   }
 }
